Corrige url de la imagen del componente Hero.astro

--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -7,5 +7,5 @@
         </p>
         <button class="bg-orange-500 px-3 py-2 hover:bg-orange-400">Start Now</button>
     </div>
-    <img src="/public/img/umbrella.svg" alt="Demo Image" class="w-80 mt-10 md: m-0" />
+    <img src="img/umbrella.svg" alt="Demo Image" class="w-80 mt-10 md: m-0" />
 </header>
